# prologistic-api

./: pyproject.toml  test.db
app/: main.py
app/api/v1/: clients.py  land_shipments.py  ports.py  products.py  router.py  sea_shipments.py  warehouses.py
app/core/: config.py  database.py
app/crud/: client.py  land_shipment.py  port.py  product.py  sea_shipment.py  utils.py  warehouse.py
app/models/: client.py  land_shipment.py  port.py  product.py  sea_shipment.py  warehouse.py
app/schemas/: client.py  land_shipment.py  port.py  product.py  sea_shipment.py  warehouse.py
app/security/: auth.py
tests/: conftest.py  test_clients.py  test_land_shipments.py  test_sea_shipments.py
